Add content to the lasagna webpage plus images
Adding content to the lasagna webpage, like an image, description and ingredients.
Also added an image folder to the main folder, including an image of lasagna.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Odin Recipes | Lasagna</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>Lasagna</h1>
-  </body>
+    <p></p>
+    <p><img src="../images/lasagna.jpg" alt="Picture of the finished lasagna" height="310" width="450"></p>
+    <p></p>
+    <h2>Description</h2>
+    <p></p>
+    <p>
+        This is the most amazing lasagna you will <em>literally</em> ever eat.
+        It is made from italian tomatoes. And meat.
+    </p>
+    <h2>Ingredients</h2>
+    <p></p>
+    <ul>
+        <li>Tomato</li>
+        <li>Cheese</li>
+        <li>Meat</li>
+    </ul>
+    <h2>Steps</h2>
+    <p></p>
+    <ol>
+        <li>Put stuff in glass thing</li>
+        <li>Add (a lot of) Cheese</li>
+        <li>Cook in oven for long time</li>
+    </ol>
+
+
+
+</body>
+
 </html>
