--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <h1>Odin Recipes</h1>
     <p></p>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/cake.html">Cake</a></li>
+        <li>Whipped cream</li>
+    </ul>
   </body>
 </html>
