--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/cake.html">Cake</a></li>
-        <li>Whipped cream</li>
+        <li><a href="recipes/currywurst.html">Currywurst</a></li>
     </ul>
   </body>
 </html>
